--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -18,6 +18,16 @@ jobs:
     permissions:
       contents: write
       packages: write
+    strategy:
+      matrix:
+        image_type: [base, test]
+        include:
+          - image_type: base
+            dockerfile: Dockerfile
+            image_suffix: ""
+          - image_type: test
+            dockerfile: Dockerfile.test
+            image_suffix: "-test"
 
     steps:
       - name: Checkout code
@@ -37,7 +47,7 @@ jobs:
         id: meta
         uses: docker/metadata-action@v5
         with:
-          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}${{ matrix.image_suffix }}
           tags: |
             type=semver,pattern={{version}}
             type=semver,pattern={{major}}.{{minor}}
@@ -49,6 +59,7 @@ jobs:
         uses: docker/build-push-action@v6
         with:
           context: .
+          file: ${{ matrix.dockerfile }}
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
@@ -56,7 +67,7 @@ jobs:
           cache-to: type=gha,mode=max
 
       - name: Create Release
-        if: startsWith(github.ref, 'refs/tags/')
+        if: startsWith(github.ref, 'refs/tags/') && matrix.image_type == 'base'
         uses: softprops/action-gh-release@v2
         with:
           files: ""
